@@ -3,6 +3,8 @@
 (2008-03-03)
  * Now the shortcut editor should recognize some of the multimedia keys.
  * (By user request) Added an action to reset the video equalizer.
+ * Remove starting and ending whitespaces in mp3 tags. Patch by 
+   Tanguy Krotoff <tkrotoff@gmail.com>
 
 (2008-03-02)
  * Bugfix: the keys PgDown and PgUp were incorrectly identified as PageDown
